--- a/index.html
+++ b/index.html
@@ -58,49 +58,34 @@
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-
-		<!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Link</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link disabled" href="#">Disabled</a>
-			</li>
-			</ul>
-		</div> -->
 	</nav>
 
-	<!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
-		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-	</ol>
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-		<img class="d-block w-100" src="./image/banner.png" alt="First slide">
+	<div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselIndicators" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+			<img class="d-block w-100" src="./image/banner.png" alt="First slide">
+			</div>
+			<div class="carousel-item">
+			<img class="d-block w-100" src="./image/banner.png" alt="Second slide">
+			</div>
+			<div class="carousel-item">
+			<img class="d-block w-100" src="./image/banner.png" alt="Third slide">
+			</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
 		</div>
-		<div class="carousel-item">
-		<img class="d-block w-100" src="./image/banner.png" alt="Second slide">
-		</div>
-		<div class="carousel-item">
-		<img class="d-block w-100" src="./image/banner.png" alt="Third slide">
-		</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-	</div> -->
-
 	<div class="dropdowns">
 		<div class="col-4 d-flex">
 			<h6>選擇區域：</h6>
@@ -134,117 +119,13 @@
 				<button class="btn btn-outline-success col-12" data-toggle="modal" data-target="#menuModal">立即訂餐</button>
 			</div>
 		</div>
-		<div class="card" data-city="1">
-			<div class="d-flex justify-content-center col-12 mb-3">
-				<img src="./image/restaurant.png" class="card-img-top" alt="...">
-			</div>
-			<div class="d-flex justify-content-between col-12">
-				<div class="d-flex">
-					<h5>新北實踐店</h5>
-					<a href="https://goo.gl/maps/DgmqGSQRba2wxXrE8" target="_blank">&ensp;<i class="fa-solid fa-location-dot"></i></a>
-				</div>
-				<div><i class="fa-solid fa-star"></i>&nbsp;4.3</div>
-			</div>
-			<div class="d-flex justify-content-center col-12">
-				<button class="btn btn-outline-success col-12" data-toggle="modal" data-target="#menuModal">立即訂餐</button>
-			</div>
-		</div>
-		<div class="card" data-city="1">
-			<div class="d-flex justify-content-center col-12 mb-3">
-				<img src="./image/restaurant.png" class="card-img-top" alt="...">
-			</div>
-			<div class="d-flex justify-content-between col-12">
-				<div class="d-flex">
-					<h5>新北實踐店</h5>
-					<a href="https://goo.gl/maps/DgmqGSQRba2wxXrE8" target="_blank">&ensp;<i class="fa-solid fa-location-dot"></i></a>
-				</div>
-				<div><i class="fa-solid fa-star"></i>&nbsp;4.3</div>
-			</div>
-			<div class="d-flex justify-content-center col-12">
-				<button class="btn btn-outline-success col-12" data-toggle="modal" data-target="#menuModal">立即訂餐</button>
-			</div>
-		</div>
-		<div class="card" data-city="1">
-			<div class="d-flex justify-content-center col-12 mb-3">
-				<img src="./image/restaurant.png" class="card-img-top" alt="...">
-			</div>
-			<div class="d-flex justify-content-between col-12">
-				<div class="d-flex">
-					<h5>新北實踐店</h5>
-					<a href="https://goo.gl/maps/DgmqGSQRba2wxXrE8" target="_blank">&ensp;<i class="fa-solid fa-location-dot"></i></a>
-				</div>
-				<div><i class="fa-solid fa-star"></i>&nbsp;4.3</div>
-			</div>
-			<div class="d-flex justify-content-center col-12">
-				<button class="btn btn-outline-success col-12" data-toggle="modal" data-target="#menuModal">立即訂餐</button>
-			</div>
-		</div>
-	</div>
-	
-	<div class="modal fade" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="menuModalLabel" aria-hidden="true">
-		<div class="modal-dialog modal-xl" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="menuModalLabel">新北實踐店</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<div class="d-flex">
-						<div class="col-2"  style="height: 60vh; overflow-y: auto;">
-							<div class=" d-flex flex-column align-items-center">
-								<img src="./image/restaurant.png" class="card-img-top" alt="...">
-								<h6>公雞老麵堡</h6>
-							</div>
-							<hr>
-							<div class=" d-flex flex-column align-items-center">
-								<img src="./image/restaurant.png" class="card-img-top" alt="...">
-								<h6>公雞老麵堡</h6>
-							</div>
-							<hr>
-							<div class=" d-flex flex-column align-items-center">
-								<img src="./image/restaurant.png" class="card-img-top" alt="...">
-								<h6>公雞老麵堡</h6>
-							</div>
-							<hr>
-							<div class=" d-flex flex-column align-items-center">
-								<img src="./image/restaurant.png" class="card-img-top" alt="...">
-								<h6>公雞老麵堡</h6>
-							</div>
-						</div>
-						<div class="col-10">
-							<div class="d-flex flex-wrap">
-								<div class="col-4">
-									<img src="./image/公雞老麵堡/嗡嗡起司老麵堡.jpg" class="card-img-top" alt="...">
-									<h4>嗡嗡起司老麵堡</h4>
-									<div class="d-flex justify-content-between align-items-center">
-										<div class="col-9" style="padding: 0;">NT$ 100</div>
-										<div class="col-3" style="padding: 0;"><button class="btn btn-outline-primary"> + </button></div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-2"></div>
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
-				</div>
-			</div>
-		</div>
 	</div>
 	<div class="about-us">
 		<h2>About Us</h2>
 		<p>This is a brief description of the development team...</p>
 	</div>
 
-
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" integrity="sha512-uKQ39gEGiyUJl4AI6L+ekBdGKpGw4xJ55+xyJG7YFlJokPNYegn9KwQ3P8A7aFQAUtUsAQHep+d/lrGqrbPIDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -275,4 +156,40 @@
 			}
 		});
 	});
+
+	$.ajax({
+                url: 'backend/restaurants.php',
+                method: 'GET',
+                dataType: 'json',
+                success: function(response) {
+					$('.restaurant-cards').empty();
+					for(var i = 0; i < response.length; i++) {
+						var card = $('<div class="card" data-city="' + response[i].city + '"></div>');
+						var cardHeader = $('<div class="d-flex justify-content-center col-12 mb-3"></div>');
+						var cardImg = $('<img src="./image/restaurant.png" class="card-img-top" alt="...">');
+						var cardBody = $('<div class="d-flex justify-content-between col-12"></div>');
+						var cardTitle = $('<div class="d-flex"></div>');
+						var cardTitleText = $('<h5>' + response[i].name + '</h5>');
+						var cardTitleLink = $('<a href="' + response[i].google_map + '" target="_blank">&ensp;<i class="fa-solid fa-location-dot"></i></a>');
+						var cardRating = $('<div><i class="fa-solid fa-star"></i>&nbsp;' + response[i].star + '</div>');
+						var cardFooter = $('<div class="d-flex justify-content-center col-12"></div>');
+						var cardButton = $('<button class="btn btn-outline-success col-12" onClick=location.href="menu.html?id=' + response[i].id + '">立即訂餐</button>');
+
+						cardTitle.append(cardTitleText);
+						cardTitle.append(cardTitleLink);
+						cardHeader.append(cardImg);
+						cardBody.append(cardTitle);
+						cardBody.append(cardRating);
+						cardFooter.append(cardButton);
+						card.append(cardHeader);
+						card.append(cardBody);
+						card.append(cardFooter);
+						$('.restaurant-cards').append(card);
+					}
+                },
+                error: function(xhr, status, error) {
+                    console.log('Request failed: ' + status);
+                }
+            });
 </script>
+
