--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			flex-wrap: wrap;
+			padding: 0 5em;
 		}
 
 		.about-us {
