--- a/menu.html
+++ b/menu.html
@@ -21,14 +21,14 @@
 		}
 
 		.menuCard{
-			/* border-radius: 15px; */
-			/* border: solid gray 1px; */
-			height: 250px;
+			border-radius: 15px;
+			border: solid #bbb 1px;
+			min-height: 250px;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-around;
 			align-items: center;
-			padding: 10px 0;
+			padding: 10px;
 			margin: 0;
 			box-shadow: 9px 10px 5px -5px #CACACA;
 		}
@@ -208,14 +208,16 @@
 					for (const i in response) {
 						let _this = response[i];
 						$('.menuList').append(`
-								<div class="col-3 menuCard">
-									<img src="./image/公雞老麵堡/嗡嗡起司老麵堡.jpg" class="card-img-top" alt="...">
-									<h4>嗡嗡起司老麵堡</h4>
-									<div class="d-flex justify-content-between align-items-center">
-										<div class="col-9" style="padding: 0;">NT$ 100</div>
-										<div class="col-3" style="padding: 0;"><button class="btn btn-outline-primary"> + </button></div>
+								<div class="col-12 col-md-4 col-lg-3 mb-3">
+									<div class="menuCard">
+										<img src="./image/${_this.image}" width="100%" height="100%" alt="meals-pic">
+										<h4>${_this.name}</h4>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="col-9" style="padding: 0;">NT$ ${_this.price}</div>
+											<div class="col-3" style="padding: 0;"><button class="btn btn-outline-primary"> + </button></div>
+										</div>
 									</div>
-							</div>`);
+								</div>`);
 					}
 				},
 				error: function(xhr, status, error) {
