--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="/">早安公雞 農場晨食</a>
+		<a class="navbar-brand" href="./">早安公雞 農場晨食</a>
 		<ul class="nav justify-content-center ml-auto">
 			<li class="nav-item">
 			  <a class="nav-link" id="cart-btn" tabindex="-1">購物車</a>
