--- a/menu.html
+++ b/menu.html
@@ -82,32 +82,32 @@
 
 	<div class="d-flex flex-wrap">
 		<div class="col-4 col-lg-2 d-flex flex-wrap" style="max-height: 58vh; overflow-y: auto;">
-			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 150px;" onclick="getMenu('A')">
-				<img src="./image/restaurant.png" alt="restaurant" style="width: 60%;">
+			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 30px;" onclick="getMenu('A')">
+				<!-- <img src="./image/restaurant.png" alt="restaurant" style="width: 60%;"> -->
 				<p>公雞老麵堡</p>
 			</div>
-			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 150px;" onclick="getMenu('B')">
-				<img src="./image/restaurant.png" alt="restaurant" style="width: 60%;">
+			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 30px;" onclick="getMenu('B')">
+				<!-- <img src="./image/restaurant.png" alt="restaurant" style="width: 60%;"> -->
 				<p>母雞蛋煎餅</p>
 			</div>
-			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 180px;" onclick="getMenu('C')">
-				<img src="./image/restaurant.png" alt="restaurant" style="width: 60%;">
+			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 30px;" onclick="getMenu('C')">
+				<!-- <img src="./image/restaurant.png" alt="restaurant" style="width: 60%;"> -->
 				<p>小雞愛吐司<br>(抹醬系列)</p>
 			</div>
-			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 150px;" onclick="getMenu('D')">
-				<img src="./image/restaurant.png" alt="restaurant" style="width: 60%;">
+			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 30px;" onclick="getMenu('D')">
+				<!-- <img src="./image/restaurant.png" alt="restaurant" style="width: 60%;"> -->
 				<p>小雞愛吐司</p>
 			</div>
-			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 150px;" onclick="getMenu('E')">
-				<img src="./image/restaurant.png" alt="restaurant" style="width: 60%;">
+			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 30px;" onclick="getMenu('E')">
+				<!-- <img src="./image/restaurant.png" alt="restaurant" style="width: 60%;"> -->
 				<p>烏冬熱熱炒</p>
 			</div>
-			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 150px;" onclick="getMenu('F')">
-				<img src="./image/restaurant.png" alt="restaurant" style="width: 60%;">
+			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 30px;" onclick="getMenu('F')">
+				<!-- <img src="./image/restaurant.png" alt="restaurant" style="width: 60%;"> -->
 				<p>農場小點心</p>
 			</div>
-			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 150px;" onclick="getMenu('G')">
-				<img src="./image/restaurant.png" alt="restaurant" style="width: 60%;">
+			<div  class="d-flex flex-column align-items-center" style="width:150px; height: 30px;" onclick="getMenu('G')">
+				<!-- <img src="./image/restaurant.png" alt="restaurant" style="width: 60%;"> -->
 				<p>一日早晨飲</p>
 			</div>
 		</div>
