--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<a class="navbar-brand" href="./">早安公雞 農場晨食</a>
 		<ul class="nav justify-content-center ml-auto">
 			<li class="nav-item">
-			  <a class="nav-link" id="cart-btn" tabindex="-1">購物車</a>
+			  <a class="nav-link" href="./cart.html" >購物車</a>
 			</li>
 		</ul>
 	</nav>
